Fixed defect about price range slider breaking in large screens, edit search in details alignment, and included count of amenities selected

--- a/Areas/BridgeStreet/Assets/Local/Less/breakpoints/mobile/components/_tripdetails.less
+++ b/Areas/BridgeStreet/Assets/Local/Less/breakpoints/mobile/components/_tripdetails.less
@@ -13,8 +13,9 @@
 
         &__subtitle {
           font-size: 16px;
-          font-weight: 600;
+          font-weight: bold;
           color: @navy;
+          margin: 20px 0 12px;
         }
 
 		&.expand {
