--- a/Areas/BridgeStreet/Assets/Local/Less/breakpoints/tablet/components/_tripdetails.less
+++ b/Areas/BridgeStreet/Assets/Local/Less/breakpoints/tablet/components/_tripdetails.less
@@ -56,9 +56,9 @@
         display: none;
     }
 
-    h2{
-        margin-bottom:20px;
-        font-size: 36px;
+    h2 {
+      margin: 0;
+      font-size: 36px;
     }
 
     img{
