--- a/Areas/BridgeStreet/Assets/Local/Less/breakpoints/wide/components/_searchresultsfilter.less
+++ b/Areas/BridgeStreet/Assets/Local/Less/breakpoints/wide/components/_searchresultsfilter.less
@@ -10,6 +10,10 @@
 
 			&.price-range-slider {
 				padding-bottom: 0;
+
+              #RangeSlider {
+                width: 60%;
+              }
 			}				
 
 			&.view-section {
